--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Unisport</title>
   </head>
 
-  <body class="dark:bg-black dark:text-white">
+  <body class="bg-green-50/50 dark:bg-green-900 dark:text-white">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
