--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Unisport</title>
   </head>
 
-  <body class="bg-gray-100 dark:bg-black dark:text-white">
+  <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
